Update W7.A1. From Concept to Reality.md

--- a/W7.A1. From Concept to Reality.md
+++ b/W7.A1. From Concept to Reality.md
@@ -1,3 +1,6 @@
 [W7.A1. From Concept to Reality][]
 
 [W7.A1. From Concept to Reality]: https://drive.google.com/file/d/1p52zjS9sPqNfUFZY9yYpbXTgjsiVBZ9O/view?usp=sharing
+
+<a href="https://drive.google.com/file/d/1p52zjS9sPqNfUFZY9yYpbXTgjsiVBZ9O/view?usp=sharing" target="_blank">W7.A1. From Concept to Reality</a>
+
